Basic attempt to make this current

--- a/stdlib/ungpeg/doc/todo.txt
+++ b/stdlib/ungpeg/doc/todo.txt
@@ -1,3 +1,9 @@
+--- Current
+[ ] Transformation execution engine
+[ ] Pre-NFA normalization
+
+
+--- Overview (older)
 [ ] Opt backtracking/memoizing elimination
 [ ] Multi backtracking/memoization elimination
 [ ] Predicate backtracking/memoization elimination
